# v4l2-hevc-meme

./: .gitattributes  .gitignore  .wpiformat-license  CMakeLists.txt  FfmpegRtpPipe.cpp  FfmpegRtpPipe.hpp  LICENSE.md  README.md  build.gradle  config.gradle  main.cpp  mediamtx.yml  mre.cpp  publish.gradle  rtsp_client.py  rtsp_server.cpp  stream_sdp.txt
media/: IMG_3733.MOV
src/: FfmpegRtpPipe.cpp  FfmpegRtpPipe.hpp  RtspClientsMap.cpp  RtspClientsMap.hpp  main.cpp  rtsp_server.cpp  rtsp_server.hpp
src/main/java/org/photonvision/ffmpeg/: FfmpegRtspHandler.java
src/main/native/cpp/: FfmpegJni.cpp  FfmpegRtpPipe.cpp  FfmpegRtpPipe.hpp  RtspClientsMap.cpp  RtspClientsMap.hpp  main.cpp  rtsp_server.cpp  rtsp_server.hpp
src/test/java/org/photonvision/ffmpeg/: FfmpegJniTest.java
utils/: bench.sh  listen.py  test.sdp
